--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="content">
+  <app-sidebar></app-sidebar>
+  <router-outlet></router-outlet>
+</div>
