--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,125 +1,4 @@
-<!-- header -->
-<header>
-  <nav class="navbar navbar-expand navbar-light bg-white">
-    <a class="navbar-brand ml-3 pr-5 border-right py-2" href="#"><img src="assets/images/logo.png" alt="Hi Force"></a>
-
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0);" onclick="toggleSidebar()"><i
-              class="fas fa-bars align-middle"></i></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav toggle-navbar">
-        <li class="nav-item align-self-center">
-          <a class="nav-link" href="#"><i class="fas fa-search align-bottom icon-size"></i></a>
-        </li>
-        <li class="nav-item align-self-center ml-2 dropdown notification">
-          <a class="nav-link" href="#" id="notificatioDD" data-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-bell align-bottom icon-size"></i>
-          </a>
-          <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="notificatioDD">
-            <h5 class="dropdown-item text-dark font-weight-bold no-bg-hover">Notifications<small
-                class="badge badge-danger float-right">8</small></h5>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item row m-0 mt-2" href="#">
-              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
-              <div class="col-9 align-self-center row">
-                <div>
-                  <div class="name">Regina Cooper</div>
-                  <div class="time-active text-hi-dark-grey"><small>1 min ago</small></div>
-                </div>
-                <div class="ml-auto align-self-center">
-                  <i class="fas fa-times p-1"></i>
-                </div>
-              </div>
-            </a>
-            <a class="dropdown-item row m-0 mt-2" href="#">
-              <div class="col-3 align-self-center"><img src="assets/images/avatar.png" class="w-100"></div>
-              <div class="col-9 align-self-center row">
-                <div>
-                  <div class="name">Regina Cooper</div>
-                  <div class="time-active text-hi-dark-grey"><small>1 min ago</small></div>
-                </div>
-                <div class="ml-auto align-self-center">
-                  <i class="fas fa-times p-1"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-        </li>
-        <li class="nav-item align-self-center dropdown ml-4 user">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-            aria-expanded="false">
-            <img src="assets/images/avatar.png"><span class="align-middle"> Art
-              Template</span>
-          </a>
-          <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
-              <div class="col-3"><img src="assets/images/avatar.png" class="w-100"></div>
-              <div class="col-9 align-self-center row">
-                <div>
-                  <div class="username">ArtTemplate</div>
-                  <div class="position text-hi-grey"><small>Manager</small></div>
-                </div>
-                <div class="ml-auto align-self-center">
-                  <span class="badge badge-danger">8</span>
-                </div>
-              </div>
-            </h6>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-user mr-2"></i>My Profile</a>
-            <a class="dropdown-item" href="#"><i class="fas fa-envelope mr-2"></i>My Messages</a>
-            <a class="dropdown-item" href="#"><i class="fas fa-clipboard mr-2"></i>My Tasks</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-cog mr-2"></i>Settings</a>
-            <a class="dropdown-item" href="#"><i class="fas fa-lock mr-2"></i>Lock Screen</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="navbar-light toggle-navbar-bottom">
-    <ul class="navbar-nav toggle-navbar-bottom-nav list-unstyled justify-content-end mb-0 bg-white"></ul>
-  </div>
-</header>
 <div class="content">
-  <!-- sidebar -->
-  <div class="sidebar sticky-top border-right">
-    <div class="navbar-nav">
-      <a class="nav-item p-2 text-hi-dark pl-3" href="#">
-        <div class="link-icon pr-3 align-middle"><i class="fas fa-th-large"></i></div>
-        <div class="link-text align-middle">Dashboard</div>
-      </a>
-      <div class="dropright py-2">
-        <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" href="#" id="navbarDropdown" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="link-icon pr-3 align-middle w-100"><i class="fas fa-layer-group"></i></div>
-          <div class="link-text align-middle">Hub</div>
-        </a>
-        <div class="dropdown-menu ml-0" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-hi-dark" href="#">H.E.S. Sales Limited</a>
-          <a class="dropdown-item text-hi-dark" href="#">Hi-Force</a>
-          <a class="dropdown-item text-hi-dark" href="#">Protec SRL</a>
-        </div>
-      </div>
-      <a class="nav-item p-2 text-hi-dark pl-3 active" href="#">
-        <div class="link-icon pr-3 align-middle"><i class="fas fa-user"></i></div>
-        <div class="link-text align-middle">Users</div>
-      </a>
-      <a class="nav-item p-2 text-hi-dark pl-3" href="#">
-        <div class="link-icon pr-3 align-middle"><i class="far fa-envelope"></i></div>
-        <div class="link-text align-middle">Communication</div>
-      </a>
-      <a class="nav-item p-2 text-hi-dark pl-3" href="#">
-        <div class="link-icon pr-3 align-middle"><i class="fas fa-signal"></i></div>
-        <div class="link-text align-middle">Reports</div>
-      </a>
-    </div>
-  </div>
-
   <!-- main content -->
   <div class="main main-hub p-3 w-100">
     <h3 class="mb-4 clearfix heading">
@@ -138,8 +17,8 @@
                     Add
                   </button>
                   <div class="dropdown-menu" aria-labelledby="addCOntentDD">
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-plus mr-1"></i>Create New User</a>
-                    <a class="dropdown-item" href="#"><i class="fas fa-file-import mr-1"></i>Import CSV File</a>
+                    <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-user-plus mr-1"></i>Create New User</a>
+                    <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-file-import mr-1"></i>Import CSV File</a>
                   </div>
                 </div>
               </div>
@@ -150,17 +29,17 @@
                     <div class="card-header">
                       <ul class="nav nav-tabs card-header-tabs">
                         <li class="nav-item">
-                          <a class="nav-link text-hi-dark-grey active" href="#">
+                          <a class="nav-link text-hi-dark-grey active" href="javascript:void(0)">
                             All Users
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link text-hi-dark-grey" href="#">
+                          <a class="nav-link text-hi-dark-grey" href="javascript:void(0)">
                             Active Users
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link text-hi-dark-grey" href="#">
+                          <a class="nav-link text-hi-dark-grey" href="javascript:void(0)">
                             Deactive Users
                           </a>
                         </li>
@@ -265,14 +144,14 @@
                         </div>
                         <ul class="pagination">
                           <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i
+                            <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
                                 class="fas fa-chevron-left"></i></a>
                           </li>
-                          <li class="page-item"><a class="page-link" href="#">1</a></li>
-                          <li class="page-item"><a class="page-link" href="#">2</a></li>
-                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
                           <li class="page-item">
-                            <a class="page-link" href="#"><i class="fas fa-chevron-right"></i></a>
+                            <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
                           </li>
                         </ul>
                       </div>
@@ -637,14 +516,14 @@
                         </div>
                         <ul class="pagination">
                           <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true"><i
+                            <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
                                 class="fas fa-chevron-left"></i></a>
                           </li>
-                          <li class="page-item"><a class="page-link" href="#">1</a></li>
-                          <li class="page-item"><a class="page-link" href="#">2</a></li>
-                          <li class="page-item"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
+                          <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
                           <li class="page-item">
-                            <a class="page-link" href="#"><i class="fas fa-chevron-right"></i></a>
+                            <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
                           </li>
                         </ul>
                       </div>
