--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,7 +7,7 @@
       <mat-tab-group>
         <mat-tab label="Users">
           <!-- users page -->
-          <div class="users-section overflow-hidden">
+          <div class="users-section">
             <div class="buttons-row row mt-3 justify-content-between mx-2">
               <div class="dropdown">
                 <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD"
@@ -23,137 +23,127 @@
               </div>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-4 mx-0">
               <div [ngClass]="{'sub-tab-nav': true,'col-md-12' : !showDoc, 'col-md-8': showDoc}">
                 <div class="card">
                   <div class="card-header">
-                    <ul class="nav nav-tabs card-header-tabs">
-                      <li class="nav-item">
-                        <a class="nav-link text-hi-dark-grey active" href="javascript:void(0)">
-                          All Users
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-hi-dark-grey" href="javascript:void(0)">
-                          Active Users
-                        </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-hi-dark-grey" href="javascript:void(0)">
-                          Deactive Users
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <div class="row heading">
-                        <div class="search col-lg-8 col-sm-7">
-                          <div class="input-group">
-                            <div class="input-group-prepend">
-                              <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
-                            </div>
-                            <input type="text" class="form-control border-left-0 border-right-0"
-                              placeholder="Search ...">
-                            <div class="input-group-append">
-                              <span class="input-group-text bg-transparent primary-bg-hover"><i
-                                  class="fas fa-sliders-h"></i></span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-lg-4 col-sm-5 align-self-center">
-                          <div class="float-left">
-                            <!-- Button trigger for send invitations modal -->
-                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#sendInvModal">
-                              Send Invitations
-                            </button>
-                          </div>
-                          <div class="float-right">
-                            <div class="dropdown">
-                              <button class="btn btn-light dropdown-toggle" type="button" id="settingsID"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-cog"></i>
-                              </button>
-                              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsID">
-                                <button disabled class="dropdown-item">Visible Column</button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye mr-2"></i>Role
-                                </button>
-                                <button disabled class="dropdown-item">Hidden Column</button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye-slash mr-2"></i>Property
-                                </button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye-slash mr-2"></i>License Type
-                                </button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye-slash mr-2"></i>Groups
-                                </button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye-slash mr-2"></i>Division
-                                </button>
-                                <button class="dropdown-item">
-                                  <i class="fas fa-eye-slash mr-2"></i>Experience
-                                </button>
+                    <mat-tab-group>
+                      <mat-tab label="All Users">
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            <div class="row heading">
+                              <div class="search col-lg-8 col-sm-7">
+                                <div class="input-group">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text bg-transparent"><i class="fas fa-search"></i></span>
+                                  </div>
+                                  <input type="text" class="form-control border-left-0 border-right-0"
+                                    placeholder="Search ...">
+                                  <div class="input-group-append">
+                                    <span class="input-group-text bg-transparent primary-bg-hover"><i
+                                        class="fas fa-sliders-h"></i></span>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-lg-4 col-sm-5 align-self-center">
+                                <div class="float-left">
+                                  <!-- Button trigger for send invitations modal -->
+                                  <button type="button" class="btn btn-light" data-toggle="modal"
+                                    data-target="#sendInvModal">
+                                    Send Invitations
+                                  </button>
+                                </div>
+                                <div class="float-right">
+                                  <div class="dropdown">
+                                    <button class="btn btn-light dropdown-toggle" type="button" id="settingsID"
+                                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      <i class="fas fa-cog"></i>
+                                    </button>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsID">
+                                      <button disabled class="dropdown-item">Visible Column</button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye mr-2"></i>Role
+                                      </button>
+                                      <button disabled class="dropdown-item">Hidden Column</button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye-slash mr-2"></i>Property
+                                      </button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye-slash mr-2"></i>License Type
+                                      </button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye-slash mr-2"></i>Groups
+                                      </button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye-slash mr-2"></i>Division
+                                      </button>
+                                      <button class="dropdown-item">
+                                        <i class="fas fa-eye-slash mr-2"></i>Experience
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>
                               </div>
                             </div>
+                          </h5>
+                          <div class="card-text">
+                            <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
+                              <thead>
+                                <tr>
+                                  <th scope="col">NAME<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
+                                  </th>
+                                  <th scope="col">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col">Role<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                  <th scope="col">Date Created<i class="fas fa-sort-down ml-1 align-top"></i></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr (click)="toggleDoc()">
+                                  <td>
+                                    User Full Name<br />
+                                    <small>email@email.com</small>
+                                  </td>
+                                  <td class="text-hi-dark-grey">19 Aug 2020</td>
+                                  <td>19 Aug 2020</td>
+                                  <td class="text-hi-dark-grey">User</td>
+                                  <td>19 Aug 2020</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <div class="card-footer bg-white row justify-content-between">
+                            <div class="pages">
+                              <div class="input-group mb-3">
+                                <select class="custom-select rounded" id="inputGroupSelect02">
+                                  <option selected>10</option>
+                                  <option>20</option>
+                                </select>
+                                <div class="input-group-append">
+                                  <label class="input-group-text bg-white border-0 text-hi-dark-grey"
+                                    for="inputGroupSelect02">Showing 1-10 of
+                                    100</label>
+                                </div>
+                              </div>
+                            </div>
+                            <ul class="pagination">
+                              <li class="page-item disabled">
+                                <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
+                                    class="fas fa-chevron-left"></i></a>
+                              </li>
+                              <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
+                              <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
+                              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                              <li class="page-item">
+                                <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
+                              </li>
+                            </ul>
                           </div>
                         </div>
-                      </div>
-                    </h5>
-                    <div class="card-text">
-                      <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
-                        <thead>
-                          <tr>
-                            <th scope="col">NAME<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Latest Activity<i class="fas fa-sort-down ml-1 align-top"></i>
-                            </th>
-                            <th scope="col">Content Updated<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Role<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                            <th scope="col">Date Created<i class="fas fa-sort-down ml-1 align-top"></i></th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr (click)="toggleDoc()">
-                            <td>
-                              User Full Name<br />
-                              <small>email@email.com</small>
-                            </td>
-                            <td class="text-hi-dark-grey">19 Aug 2020</td>
-                            <td>19 Aug 2020</td>
-                            <td class="text-hi-dark-grey">User</td>
-                            <td>19 Aug 2020</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                    <div class="card-footer bg-white row justify-content-between">
-                      <div class="pages">
-                        <div class="input-group mb-3">
-                          <select class="custom-select rounded" id="inputGroupSelect02">
-                            <option selected>10</option>
-                            <option>20</option>
-                          </select>
-                          <div class="input-group-append">
-                            <label class="input-group-text bg-white border-0 text-hi-dark-grey"
-                              for="inputGroupSelect02">Showing 1-10 of
-                              100</label>
-                          </div>
-                        </div>
-                      </div>
-                      <ul class="pagination">
-                        <li class="page-item disabled">
-                          <a class="page-link" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                              class="fas fa-chevron-left"></i></a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                        <li class="page-item">
-                          <a class="page-link" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
-                        </li>
-                      </ul>
-                    </div>
+                      </mat-tab>
+                      <mat-tab label="Active Users">Same Table</mat-tab>
+                      <mat-tab label="Deactive Users">Same Table</mat-tab>
+                    </mat-tab-group>
                   </div>
                 </div>
               </div>
