--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,7 +1,8 @@
 <div class="users-section">
   <div class="buttons-row row mt-3 justify-content-between mx-2">
     <div class="dropdown">
-      <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="addCOntentDD" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
         Add
       </button>
       <div class="dropdown-menu" aria-labelledby="addCOntentDD">
@@ -39,27 +40,32 @@
                         </button>
                       </div>
                       <div class="float-right">
-                        <div class="dropdown" (clickOutside)="outsideCloseDD(cogDropDown)">
+                        <div class="dropdown" (clickOutside)="outsideCloseDD(cogDropDown, $event)">
                           <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                             <i class="fas fa-cog"></i>
                           </button>
                           <div class="cog dropdown-menu dropdown-menu-right" #cogDropDown>
                             <div class="scrollable">
                               <span class="ml-2 heading">Visible Columns</span>
-                              <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
+                              <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList" [cdkDropListData]="visbCols"
+                                class="min-ht pl-0 mt-2" [cdkDropListConnectedTo]="[hidList]"
+                                (cdkDropListDropped)="drop($event)">
                                 <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index" cdkDrag>
                                   <span class="ellipsis mr-2">
                                     <i class="fa fa-ellipsis-v"></i>
                                     <i class="fa fa-ellipsis-v"></i>
                                   </span>
-                                  <i class="text-primary fas fa-eye mr-2" (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                                  <i class="text-primary fas fa-eye mr-2"
+                                    (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
                                 </button>
                                 <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">
                                   No visbible columns
                                 </span>
                               </ul>
                               <span class="ml-2 heading">Hidden Columns</span>
-                              <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
+                              <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList" [cdkDropListData]="hidCols"
+                                class="min-ht pl-0 mt-2 mb-0" [cdkDropListConnectedTo]="[visbList]"
+                                (cdkDropListDropped)="drop($event)">
                                 <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index" cdkDrag>
                                   <span class="ellipsis mr-2 mb-1">
                                     <i class="fa fa-ellipsis-v"></i>
@@ -74,7 +80,8 @@
                             </div>
                             <hr class="mb-2">
                             <div class="float-right mr-2">
-                              <button class="btn btn-secondary btn-sm mr-2" (click)=closeDropdown($event)>Cancel</button>
+                              <button class="btn btn-secondary btn-sm mr-2"
+                                (click)=closeDropdown($event)>Cancel</button>
                               <button class="btn btn-primary btn-sm" (click)=saveHdrChngs($event);>Save</button>
                             </div>
                           </div>
@@ -88,7 +95,8 @@
                     <thead>
                       <tr>
                         <th class="curs-ptr" *ngFor="let col of cols">
-                          {{col.n}}<i class="fas ml-1" [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
+                          {{col.n}}<i class="fas ml-1"
+                            [ngClass]="{'fa-sort-down align-top': col.dir==1, 'fa-sort-up align-bottom': col.dir==0}"></i>
                         </th>
                       </tr>
                     </thead>
@@ -124,7 +132,8 @@
                   </div>
                   <ul class="pagination">
                     <li class="page-item disabled">
-                      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                      <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
+                          class="fas fa-chevron-left"></i></a>
                     </li>
                     <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
                     <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
